--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,10 @@
 		"php-parallel-lint/php-console-highlighter": "0.5.0",
 		"php-parallel-lint/php-parallel-lint": "1.2.0"
 	},
+	"require": {
+		"soundasleep/html2text": "~1.1",
+		"ext-xml": "*"
+	},
 	"scripts": {
 		"test": [
 			"parallel-lint . --exclude vendor --exclude node_modules",
